--- a/frontend/src/components/ProductInfo/style.css
+++ b/frontend/src/components/ProductInfo/style.css
@@ -1,8 +1,20 @@
-/* .productInfo{
-    margin: 40px;
+.productInfo{
     display: grid;
-    grid-template-columns: 5fr 2fr ;
+    grid-template-columns: 1fr 4fr ;
+    margin: 40px;
+   
+
+}
+
+.info h3{
+    font-size: 18px;
+    padding: 0px 300px;
     
+}
 
+.info input {
+    margin: 5px;
+    padding: 0px 50px;
+    flex-direction: row;
+}
 
-} */
