--- a/frontend/src/components/Product/style.css
+++ b/frontend/src/components/Product/style.css
@@ -1,36 +1,18 @@
 
-.product {
-    margin: 100px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-}
- .card {
-    margin: 20px;
-    padding: 20px 20px;
- }
+
+
 
 .title{
-    font-size: 16px;
+    font-size: 18px;
+    font-style: oblique;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .price {
     font-size: 20px;
-    margin: 20px;
-}
-.item{
-    height: 100%;
-    width: 100%;
+    margin: 15px;
+    padding: 1px;
+    font-style: italic;
 }
 
-/* .imgForProduct{
-    border-radius: 5%;
-    border: 3px solid black;
-}
 
-.nameOfProduct{
-    font-size: 18px;
-}
-
-.priceOfProduct{
-    font-size: 18px;
-} */
