--- a/frontend/src/components/ProductInfo/style.css
+++ b/frontend/src/components/ProductInfo/style.css
@@ -1,20 +1,20 @@
+
 .productInfo{
-    display: grid;
-    grid-template-columns: 1fr 4fr ;
-    margin: 40px;
-   
-
+    margin: 50px 75px;
+    font: 20px bold ;
 }
 
-.info h3{
-    font-size: 18px;
-    padding: 0px 300px;
-    
+.card-img-left {
+    margin: 40px 0px;
+
+    box-shadow: 10px 10px 5px lightblue;
 }
 
-.info input {
+.info{
+    margin: 40px 0px;
+}
+
+.btn  {
     margin: 5px;
-    padding: 0px 50px;
-    flex-direction: row;
 }
 
