--- a/frontend/src/components/Category/style.css
+++ b/frontend/src/components/Category/style.css
@@ -1,6 +1,8 @@
-.category{
+.container{
     /* border: 5px solid black; */
-    margin: 10px;
+    margin: 10px 100px; 
+    position: relative;
+  width: 50%;
     
 }
 
@@ -8,14 +10,40 @@
     /* border: 5px solid blue; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-
+margin: 10px 100px;
 }
-
-.imag {
+.image {
+    opacity: 1;
+    display: block;
+    width: 200px;
+    height: 200px;
     border-radius: 100%;
-    border: 3px solid black;
-}
-
-.imag :hover{
-    color: rgba(32, 65, 65, 0.534);
-}
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)
+  }
+  
+  .container:hover .image {
+    opacity: 0.3;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    
+    color: rgb(5, 5, 5);
+    font-size: 24px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 16px 32px;
+  }
