--- a/frontend/src/components/NavBar/style.css
+++ b/frontend/src/components/NavBar/style.css
@@ -12,3 +12,8 @@
     border: 3px solid rgba(202, 202, 243, 0.507);
     box-shadow: 10px;
 }
+
+.navbarImeg{
+    background-color: rgba(255, 255, 255, 0);
+    
+}
