--- a/frontend/src/components/Favorit/style.css
+++ b/frontend/src/components/Favorit/style.css
@@ -10,12 +10,7 @@
     
 }
 
-/* .favoritItem{
+.favo{
     margin: 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    gap: 15px;
-    padding: 50px 50px;
-
-} */
+}
  
