--- a/frontend/src/components/Card/style.css
+++ b/frontend/src/components/Card/style.css
@@ -1,5 +1,12 @@
-.py-5 {
+.cart  {
     margin: 50px;
     box-shadow: 10px 10px 5px lightblue;
     background-color: hsl(240, 25%, 90%);
+}
+
+
+
+.deleteButton{
+    position: absolute;
+    right: 30px;
 }
