--- a/frontend/src/components/Card/style.css
+++ b/frontend/src/components/Card/style.css
@@ -1,5 +1,5 @@
 .cart  {
-    margin: 50px;
+    /* margin: 50px; */
     box-shadow: 10px 10px 5px lightblue;
     background-color: hsl(240, 25%, 90%);
 }
@@ -9,4 +9,14 @@
 .deleteButton{
     position: absolute;
     right: 30px;
+ 
 }
+
+@media only screen and (max-width: 310px) {
+    /* For mobile phones: */
+    .deleteButton{
+        position: absolute;
+       
+    }
+
+  }
