--- a/frontend/src/components/Product/style.css
+++ b/frontend/src/components/Product/style.css
@@ -15,8 +15,46 @@
     font-style: italic;
 }
 
+.responsve{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+margin: 10px 80px;
+}
 
 .buttonProduct{
     position: absolute;
     left: 130px;
 }
+
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    .responsve{
+      /* border: 5px solid blue; */
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr ;
+      gap: 20px;
+      margin: 10px 20px;
+  }
+  }
+
+  
+  @media only screen and (max-width: 785px) {
+    /* For mobile phones: */
+    .responsve{
+      /* border: 5px solid blue; */
+      display: grid;
+      grid-template-columns: 1fr 1fr  ;
+      gap: 20px;
+      margin: 10px 20px;
+  }
+  }
+
+  @media only screen and (max-width: 450px) {
+    /* For mobile phones: */
+    .responsve{
+      /* border: 5px solid blue; */
+      display: grid;
+      grid-template-columns: 1fr ;
+      margin: 10px 20px;
+  }
+  }
