--- a/frontend/src/components/ProductInfo/style.css
+++ b/frontend/src/components/ProductInfo/style.css
@@ -28,3 +28,32 @@
     position: absolute;
     right: 270px;
 }
+
+
+@media only screen and (max-width: 1000px) {
+    /* For mobile phones: */
+    .productInfo{
+      /* border: 5px solid blue; */
+     
+      margin: 20px 20px;
+  }
+  .quantity{
+    position: absolute;
+    right:160px;
+}
+
+  }
+
+  @media only screen and (max-width: 470px) {
+    /* For mobile phones: */
+    .productInfo{
+      /* border: 5px solid blue; */
+     
+      margin: 20px 20px;
+  }
+  .quantity{
+    position: absolute;
+    right:100px;
+}
+
+  }
